--- a/sqlapp/appsettings.json
+++ b/sqlapp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLConnection": "Server=tcp:proofofdata.database.windows.net,1433;Initial Catalog=proofofdata;Persist Security Info=False;User ID=sremani;Password=2600$unTr33Lane;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
